# uet-qa

./: .gitignore  LICENSE  README.md  setup.cfg
data/: uetqa-test-system.json  uetqa-test.json  uetqa-train.json  uitqa.json
data/kb/: qcctsv.md  qcdt.md
data/kb/json/: faqs.json  qcctsv.json  qcdt.json
scripts/: demo.py
scripts/data/: index_docs_es.py  normalize_vi.py
scripts/eval/: eval_retriever_es.py  eval_retriever_hybrid.py  eval_system.py
scripts/train/: make_multilingual.py  run_mix.py  run_qa.py  utils_qa.py
src/uetqa/: base.py  base_qa.py  retriever.py  util.py
src/uetqa/models/: mix.py
