# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
name = uetqa
version = 0.0.0
url = https://github.com/
project_urls =
    GitHub: issues = https://github.com/uet-qa/issues
    GitHub: repo = https://github.com/uet-qa/

author = ncthuan
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = uetqa
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE


[options]
packages =
package_dir =
    = src
setup_requires =
    setuptools
    wheel
install_requires =
    numpy>=1.18.5
    torch>=1.10.0
    transformers>=4.13.0
    streamlit
    farm-haystack[elasticsearch7]

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes


[options.extras_require]

